fix: fix bug with parallax on mobile Chrome, remove ru version, etc.

--- a/src/styles.css
+++ b/src/styles.css
@@ -227,6 +227,18 @@ li {
   /* transition: all 0.5s ease-in-out; */
 }
 
+#particles-background-section-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  opacity: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  opacity: 0;
+}
+
 .section-1-main-text,
 .bottom-nav {
   transition: all 0.5s ease-in-out;
@@ -360,21 +372,6 @@ li {
   font-size: 1.5rem;
   right: 40%;
   top: 30%;
-}
-
-.nav-language-changer {
-  color: white;
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
-  z-index: 50;
-  border: 1px solid white;
-  padding: 1rem;
-  transition: 0.3s all ease-in-out;
-}
-
-.nav-language-changer:hover {
-  background-color: #3b2a66;
 }
 
 .nav li {
@@ -1101,10 +1098,6 @@ li {
     font-size: 2vw;
     overflow-x: hidden;
     max-height: 100vh;
-  }
-  .nav-language-changer {
-    font-size: 2rem;
-    padding: 1.5rem;
   }
   .nav-internal {
     right: 17.5%;
